ensure file is read and written in iso.